XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Heads up!
~~~~~~~~~

RFCs
~~~~
- Implemented RFC #0157: Make product, language and session optional 
  URL parts
  (kiesel)
  
Bugfixes
~~~~~~~~

Features
~~~~~~~~


Version 5.6.6, released 2008-04-23
----------------------------------
SVN version: 12077

Heads up!
~~~~~~~~~
- Changed xpcli / util.cmd.Runner argument passing - argv[0] should not be
  passed to Runner::main()
  (friebe)
- Deprecated addMinutes(), addHours(), addDays() methods in util.TimeSpan
  (gellweiler)
- Backwards incompatible changes in lang.reflect package
  http://news.xp-framework.net/article/240/2008/03/08/BC
  (friebe)
- Removed deprecated lang.reflect.Argument class and corresponding 
  methods in lang.reflect.Routine
  (friebe)

RFCs
~~~~
- Implemented RFC #0160: xml.IXSLProcessor::setXMLTree() / setXSLTree()
  (friebe)
- Implemented RFC #0156: Constructor::newInstance()
  (friebe)
- Implemented RFC #0155: lang.reflect.Routine::getReturnType(): Type 
  instead of string
  (friebe)
- Implemented RFC #0148: Bytes type
  (friebe)

Bugfixes
~~~~~~~~
- Made xarloader::acquire() throw a lang.FormatException in case the
  given file is not a valid XAR archive
  (friebe)
- Fixed bug #28 - MySQLConnection does not honor Port given in DSN
  (Martin Contento, friebe)
- Fixed util.Date's constructor with timestamps
  (doebele, kiesel)
- Fixed wrong date creation in util.Message which created wrong sending
  dates
  (hinckel)
- Fixed newinstance() and create() for fully qualified classes
  (friebe)
- Fixed xml.DomXSLProcessor to produce meaningful error messages in
  case a transformation failed
  (kiesel)
- Fixed text.doclet.markup API to handle sourcecode, preformatted text
  ordered and unordered lists correctly
  (friebe)
- Added mapping for field type double to rdbms.mysql.MySQLDBAdapter
  (hinckel)