@@ -17,10 +17,16 @@
       $patterns= array(
         '#<#',
         '#>#',
-        '#&lt;(/?(ul|li|ol|tt|em))&gt;#',
         '#\r#',
-        '#\n\n#',
         '#&(?![a-z0-9\#]+;)#',
+        "#(^|\n)\* ([^\n]+(\n  [^\n]+)*)#",
+        "#(^|\n)[0-9]+\) ([^\n]+(\n  [^\n]+)*)#",
+        "#(?<!</lu>)<lu>#",
+        "#</lu>(?!<lu>)#",
+        "#(?<!</lo>)<lo>#",
+        "#</lo>(?!<lo>)#",
+        '#<(/?)(lu|lo)>#',
+        '#&lt;(/?(ul|li|ol|tt|em))&gt;#',
         '#(^| )_([^_]+)_([ \.,]|$)#', 
         '#(^| )\*([^*]+)\*([ \.,]|$)#',
         '#(^| )/([^/]+)/([ \.,]|$)#',
@@ -28,22 +34,30 @@
         '#((https?)://([^\)\]\s\t\r\n]+))#',
         '#mailto:([^@]+@[^.]+\.[a-z]{2,8})#',
         '#bug \#([0-9]+)#i',
+        '#rfc \#([0-9]+)#i',
         '#entry \#([0-9]+)#i',
         '#category \#([0-9]+)#i',
         '#:\-?\)#',
         '#:\-?\(#',
         '#;\-?\)#',
-        "#\n([^\n]+)\n[=]{3,}\n#",
-        "#\n([^\n]+)\n[-]{3,}\n#",
-        "#\n([^\n]+)\n[~]{3,}\n#",
+        "#([^\n]+)\n[=]{3,}#",
+        "#([^\n]+)\n[-]{3,}#",
+        "#([^\n]+)\n[~]{3,}#",
+        '#\n\n#',
       ),
       $replacements= array(
         '&lt;',
         '&gt;',
-        '<$1>',
         '',
-        "<br/><br/>\n",
         '&amp;', 
+        '<lu>$2</lu>',
+        '<lo>$2</lo>',
+        '<ul><li>',
+        '</li></ul>',
+        '<ol><li>',
+        '</li></ol>',
+        '<$1li>',
+        '<$1>',
         '$1<u>$2</u>$3', 
         '$1<b>$2</b>$3',
         '$1<i>$2</i>$3',
@@ -51,6 +65,7 @@
         '<link href="$3" rel="$2"/>',
         '<mailto recipient="$1"/>',
         '<bug id="$1"/>',
+        '<rfc id="$1"/>',
         '<blogentry id="$1"/>',
         '<blogcategory id="$1"/>',
         '<emoticon id="regular_smile" text="$0"/>',
@@ -59,6 +74,7 @@
         '</p><h1>$1</h1><p>',
         '</p><h2>$1</h2><p>',
         '</p><h3>$1</h3><p>',
+        "<br/><br/>\n",
       );
 
     /**
